# mipt-term2-algos

./: README.md
Contest1/: Task1.cpp  Task2.cpp  Task3.cpp  biginteger.cpp  biginteger.h
Contest2/: Task1.cpp  Task2.cpp  Task3.cpp  geometry.h  main.cpp
Contest3/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  list.h  list_test.cpp  main.cpp
Contest4/: CMakeLists.txt  Task1.cpp  Task2.cpp
